[package]
name = "blog-actix"
version = "0.1.0"
authors = ["Abey Onalaja <abey.onalaja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0-beta.2"

env_logger = "0.7.1"
futures = "0.1"
serade = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.1.0", features = ["postgres", "r2d2" ] }
dotenv = "0.14.0"